--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="header-info-mobile">
                     <a href="mailto:info@errorsdetailng.ru" class="header_mail link_mail-mobile">info@errorsdetailng.ru
                     </a>
-                    <button class="button_call-mobile" data-graph-path="call">Перезвоните мне</button>
+                    <a href="tel:89379558272"><button class="button_call-mobile" data-graph-path="call">Перезвоните мне</button></a>
                     </div>
                     <div class="header-logo-mobile">
                         <a href="../index.html" class="header_logo-link"><img src="img/errors-logo-transformed.png"
