--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="Сделайте свою машину счастливой. Особенный уход за авто от ErrorsDetailng">
+    <meta name="description" content="Лучший детейлинг-центр ErrorsDetailing в Чебоксарах. Полировка, защитное покрытие, химчистка салона и многое другое для вашего автомобиля. Запишитесь уже сегодня!">
     <title>ERORS DETAILNG</title>
 </head>
 
