--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </div>
             <div class="about-text-block">
                 <p class="about-text">Компания занимает лидирующую позицию в сфере профессионального и качественного ухода за автомобилями в Москве.</p>
-                <p class="about-text">Мы находимся в центре Москвы, и для удобства Вы можете выбрать один из наших филиалов, расположенных по адресу: г. Москва, Звенигородское шоссе 28стр2 или г. Москва, Береговой проезд 4/6 ст3.</p>
+                <p class="about-text">Мы находимся в городе Чебоксары, и для удобства Вы можете выбрать один из наших филиалов, расположенных по адресу: г. Чебоксары, проспект Мира 40 или г. Москва, проспект Геннадия Айги,10</p>
                 <p class="about-text">На территории каждого из наших филиалов расположены: посты мойки, отдельные зоны детейлинга, несколько боксов для оклейки, покрасочная камера и зона кузовного ремонта.</p>
                 <p class="about-text">
-                    На втором этаже филиала по адресу Звенигородское шоссе 28стр2 расположена демонстрационная зона выполняемых нами услуг с панорамным видом на рабочую зону.</p>
+                    На втором этаже филиала по адресу проспект Мира, 40 расположена демонстрационная зона выполняемых нами услуг с панорамным видом на рабочую зону.</p>
                 <p class="about-text">
                     Мы постоянно расширяем список наших услуг, работаем над качеством, увеличиваем пропускную способность центра, работаем над развитием наших социальных сетей и рекламой, подтверждением чего является высокий уровень в медиапространстве.</p>
                     <p class="about-text">
@@ -256,10 +256,10 @@
         <div class="footer-container">
             <div class="footer-info">
                 <p class="adress">Адрес:</p>
-                <p class="footer-text">г. Москва, Звенигородское шоссе, д. 28 ст. 2<br>
-                   г. Москва, Береговой проезд, д. 4/6, с. 3</p>
+                <p class="footer-text">г. Чебоксары, проспект Мира, 40<br>
+                   г. Чебоксары, проспект Геннадия Айги, 10</p>
                    <p class="adress consultation">Принмаем и консультируем:</p>
-                   <p class="footer-text">с 10 утра до 22 вечера.</p>
+                   <p class="footer-text">с 8 утра до 17 вечера.</p>
             </div>
             <div class="footer-links">
                 <div class="footer-block">
