--- a/services.html
+++ b/services.html
@@ -122,10 +122,10 @@
         <div class="footer-container">
             <div class="footer-info">
                 <p class="adress">Адрес:</p>
-                <p class="footer-text">г. Москва, Звенигородское шоссе, д. 28 ст. 2<br>
-                   г. Москва, Береговой проезд, д. 4/6, с. 3</p>
+                <p class="footer-text">г. Чебоксары, проспект Мира, 40<br>
+                   г. Чебоксары, проспект Геннадия Айги, 10</p>
                    <p class="adress consultation">Принмаем и консультируем:</p>
-                   <p class="footer-text">с 10 утра до 22 вечера.</p>
+                   <p class="footer-text">с 8 утра до 17 вечера.</p>
             </div>
             <div class="footer-links">
                 <div class="footer-block">
