--- a/reg.html
+++ b/reg.html
@@ -66,17 +66,17 @@
             <div class="header_container second-floor">
                 <div class="header_inner">
                     <ul class="header_menu">
-                        <a href="#services" class="header_menu-link"><li class="header_menu-item">НАШИ ОСНОВНЫЕ УСЛУГИ</li></a> 
-                        <a href="#" class="header_menu-link"><li class="header_menu-item">НАШИ ПРОЕКТЫ</li></a> 
-                        <a href="#" class="header_menu-link"><li class="header_menu-item">ГАЛЕРЕЯ</li></a> 
-                        <a href="#about" class="header_menu-link"><li class="header_menu-item">О КОМПАНИИ</li></a> 
-                        <a href="#" class="header_menu-link"><li class="header_menu-item">КОНТАКТЫ</li></a> 
+                        <a href="services.html" class="header_menu-link"><li class="header_menu-item">НАШИ ОСНОВНЫЕ УСЛУГИ</li></a> 
+                        <a href="index.html" class="header_menu-link"><li class="header_menu-item">НАШИ ПРОЕКТЫ</li></a> 
+                        <a href="index.html" class="header_menu-link"><li class="header_menu-item">ГАЛЕРЕЯ</li></a> 
+                        <a href="index.html" class="header_menu-link"><li class="header_menu-item">О КОМПАНИИ</li></a> 
+                        <a href="index.html" class="header_menu-link"><li class="header_menu-item">КОНТАКТЫ</li></a> 
                     </ul>
                 </div>
                 <div class="header_inner">
                     <ul class="header_menu-right">
-                        <a href="#" class="header_menu-link"><li class="header_menu-item">ЛИЧНЫЙ КАБИНЕТ</li></a>
-                        <a href="#" class="header_menu-link"><li class="header_menu-item">РЕГИСТРАЦИЯ</li></a>
+                        <a href="lk.html" class="header_menu-link"><li class="header_menu-item">ЛИЧНЫЙ КАБИНЕТ</li></a>
+                        <a href="reg.html" class="header_menu-link"><li class="header_menu-item">РЕГИСТРАЦИЯ</li></a>
                     </ul>
                 </div>
             </div>
