--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="about-text-block">
                 <p class="about-text">Компания занимает лидирующую позицию в сфере профессионального и качественного ухода за автомобилями в Чебоксарах.</p>
-                <p class="about-text">Мы находимся в городе Чебоксары, и для удобства Вы можете выбрать один из наших филиалов, расположенных по адресу: г. Чебоксары, проспект Мира 40 или г. Москва, проспект Геннадия Айги,10</p>
+                <p class="about-text">Мы находимся в городе Чебоксары, и для удобства Вы можете выбрать один из наших филиалов, расположенных по адресу: г. Чебоксары, проспект Мира 40 или г. Чебоксары, проспект Геннадия Айги,10</p>
                 <p class="about-text">На территории каждого из наших филиалов расположены: посты мойки, отдельные зоны детейлинга, несколько боксов для оклейки, покрасочная камера и зона кузовного ремонта.</p>
                 <p class="about-text">
                     На втором этаже филиала по адресу проспект Мира, 40 расположена демонстрационная зона выполняемых нами услуг с панорамным видом на рабочую зону.</p>
