--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </div>
                 <div class="footer-block">
                     <a class="footer-link" href="#">О компании</a>
-                    <a class="footer-link" href="#">Контакты</a>
+                    <a class="footer-link" href="https://globalreal.netlify.app/">Контакты</a>
                     <a class="footer-link" href="#">Личный кабинет</a>
                     <a class="footer-link" href="#">Регистрация</a>
                 </div>
