--- a/index.html
+++ b/index.html
@@ -104,7 +104,15 @@
                 </div>
             </div>
         </div>
-
+<!-- Yandex.RTB R-A-5881607-1 -->
+<script>
+window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-5881607-1",
+		"type": "topAd"
+	})
+})
+</script>
         <div class="header-video">
             <video class="video" preload="auto" autoplay loop muted>
                 <source src="img/header_vid.mp4">
