--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ window.yaContextCb.push(()=>{
             </video>
         </div>
         <div class="header_title">
-            <h1 class="header_title-text">ERRORS DETAILNG</h1>
+            <h1 class="header_title-text">ERRORS DETAILING</h1>
         </div>
     </header>  <!-- Шапка -->
 
