--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Лучший детейлинг-центр ErrorsDetailing в Чебоксарах. Полировка, защитное покрытие, химчистка салона и многое другое для вашего автомобиля. Запишитесь уже сегодня!">
-    <title>ERORS DETAILNG</title>
+    <title>ERORS DETAILING</title>
 </head>
 
 <body>
