--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="ru">
 
 <head>
+	<!-- Yandex.RTB -->
+<script>window.yaContextCb=window.yaContextCb||[]</script>
+<script src="https://yandex.ru/ads/system/context.js" async></script>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -37,6 +40,15 @@
 </head>
 
 <body>
+	<script>
+window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-5881607-2",
+		"type": "fullscreen",
+		"platform": "desktop"
+	})
+})
+</script>
     <header class="header"> <!-- Шапка -->
         <div class="header_wrapper">
             <div class="header_container">
