--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@
             <div class="footer-info">
                 <p class="adress">Адрес:</p>
                 <p class="footer-text">г. Чебоксары, проспект Мира, 40<br>
-                   г. Чебоксары, проспект Геннадия Айги, 10</p>
+                   г. Чебоксары, проспект И.Яковлева, д.17</p>
                    <p class="adress consultation">Принмаем и консультируем:</p>
                    <p class="footer-text">с 8 утра до 17 вечера.</p>
             </div>
