--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<!-- Yandex.RTB -->
 <script>window.yaContextCb=window.yaContextCb||[]</script>
 <script src="https://yandex.ru/ads/system/context.js" async></script>
+	<!-- Yandex.RTB -->
+<script>window.yaContextCb=window.yaContextCb||[]</script>
+<script src="https://yandex.ru/ads/system/context.js" async></script>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -133,6 +136,16 @@ window.yaContextCb.push(()=>{
         <div class="header_title">
             <h1 class="header_title-text">ERRORS DETAILING</h1>
         </div>
+	    <!-- Yandex.RTB R-A-5881607-3 -->
+<script>
+window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-5881607-3",
+		"type": "floorAd",
+		"platform": "desktop"
+	})
+})
+</script>
     </header>  <!-- Шапка -->
 
 
