--- a/index.html
+++ b/index.html
@@ -43,15 +43,6 @@
 </head>
 
 <body>
-	<script>
-window.yaContextCb.push(()=>{
-	Ya.Context.AdvManager.render({
-		"blockId": "R-A-5881607-2",
-		"type": "fullscreen",
-		"platform": "desktop"
-	})
-})
-</script>
     <header class="header"> <!-- Шапка -->
         <div class="header_wrapper">
             <div class="header_container">
@@ -142,6 +133,16 @@ window.yaContextCb.push(()=>{
 	Ya.Context.AdvManager.render({
 		"blockId": "R-A-5881607-3",
 		"type": "floorAd",
+		"platform": "desktop"
+	})
+})
+</script>
+	    <!-- Yandex.RTB R-A-5881607-2 -->
+<script>
+window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-5881607-2",
+		"type": "fullscreen",
 		"platform": "desktop"
 	})
 })
