--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@ window.yaContextCb.push(()=>{
 	})
 })
 </script>
+	    <script>
+window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-5881607-4",
+		"type": "fullscreen",
+		"platform": "touch"
+	})
+})
+</script>
         <div class="header-video">
             <video class="video" preload="auto" autoplay loop muted>
                 <source src="img/header_vid.mp4">
