--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
     
                 </div>
                 
-
+<!-- Yandex.RTB R-A-5881607-1 -->
+<script>
+window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-5881607-1",
+		"type": "topAd"
+	})
+})
+</script>
 
                 <div class="header_inner">
                     <a href="../index.html" class="header_logo"><img src="img/errors-logo-transformed.png"
