--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ window.yaContextCb.push(()=>{
 
         <div class="header-video">
             <video class="video" preload="auto" autoplay loop muted>
-                <source src="img/header_vid.mp4">
+                <source src="https://vimeo.com/912829405">
             </video>
         </div>
         <div class="header_title">
