--- a/index.html
+++ b/index.html
@@ -122,10 +122,8 @@ window.yaContextCb.push(()=>{
 
 
         <div class="header-video">
-            <video class="video" preload="auto" autoplay loop muted>
-                <source src="https://vimeo.com/912829405">
-            </video>
-        </div>
+    		<iframe class="video" src="https://player.vimeo.com/video/912829405?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="5120" height="2160" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="header_vid"></iframe>
+	</div>
         <div class="header_title">
             <h1 class="header_title-text">ERRORS DETAILING</h1>
         </div>
