--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@ window.yaContextCb.push(()=>{
 
 
         <div class="header-video">
-    		 <iframe class="video" src="https://player.vimeo.com/video/912829405?autoplay=1&loop=1&controls=0" width="5120" height="2880" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="header_vid"></iframe>
-	</div>
+            <video class="video" preload="auto" autoplay loop muted>
+                <source src="img/header_vid.mp4">
+            </video>
+        </div>
         <div class="header_title">
             <h1 class="header_title-text">ERRORS DETAILING</h1>
         </div>
